--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -838,6 +838,11 @@ footer {
     text-align: center;
 }
 
+.button-center{
+    display: flex;
+    justify-content: center;
+}
+
 input[type="time"] {
     border: none;
     color: var(--mdc-theme-primary);
