Lettertypen toegankelijk gemaakt voor elke browser, blauwe highlights weggehaald, message database gefixt :)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,24 +2,24 @@
 
 html {
     background-color: #ffffff !important;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 @font-face {
     font-family: "Montserrat-Bold";
-    src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
+    src: url("../fonts/Montserrat-Bold.woff") format("woff");
     font-display: swap;
 }
 
 @font-face {
     font-family: "Montserrat-Medium";
-    src: url("../fonts/Montserrat-Medium.ttf") format("truetype");
+    src: url("../fonts/Montserrat-Medium.woff") format("woff");
     font-display: swap;
 }
 
 @font-face {
     font-family: "Montserrat-Regular";
-    src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
+    src: url("../fonts/Montserrat-Regular.woff") format("woff");
     font-display: swap;
 }
 
